# snake-game

./: CMakeLists.txt  LICENSE  README.md
sources/: Button.cpp  DifficultyScreen.cpp  DifficultyScreen.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  HelpScreen.cpp  HelpScreen.h  MenuScreen.cpp  MenuScreen.h  MiniGameScreen.cpp  MiniGameScreen.h  PauseScreen.cpp  PauseScreen.h  Screen.cpp  Screen.h  SettingsScreen.cpp  SettingsScreen.h  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h  main.cpp
